packages/compiler/tests/snapshots/codegen__contract_airtime_quote.snap
---
source: tests/codegen.rs
assertion_line: 261
expression: result.js
---
import { branch, leaf } from '@scribe/arbor'
import { computed } from '@scribe/signals'
import { defineComponent, defineElement } from '@scribe/runtime'

defineElement('airtime-quote', defineComponent({
  attrs: ['plan', 'amount'] as const,
  setup(ctx) {
    const _plan_V = new Set(['daily', 'weekly', 'monthly'])
    const plan = computed(() => _plan_V.has(ctx.attrs.plan[0]()) ? ctx.attrs.plan[0]() : 'daily')
    const amount = computed(() => Number(ctx.attrs.amount[0]()))

    const fee = computed(() => plan() === 'daily' ? 5 : plan() === 'weekly' ? 10 : 20)
    const total = computed(() => amount() + fee())
    export function quote() {
      return { plan: plan(), amount: amount(), fee: fee(), total: total() }
    }
    return branch('div', { class: 'airtime-quote' }, [
      branch('span', undefined, [leaf(total)])
    ])
  }
}))
