packages/compiler/tests/snapshots/codegen__counter_full.snap
---
source: tests/codegen.rs
expression: output.js
---
// @aihu:extract read=agents call=anonymous
// @aihu:island interactive
import { branch, leaf, slot } from '@aihu/arbor'
import type { Signal } from '@aihu/signals'
import { signal } from '@aihu/signals'
import { defineComponent, defineElement } from '@aihu/runtime'

defineElement('counter', defineComponent((_ctx) => {
  const [count, setCount] = signal(0)
  const increment = () => setCount(c => c + 1)

  return branch('div', { class: 'counter' }, [
    branch('span', undefined, [leaf([count, setCount] as unknown as Signal<string>)]),
    branch('button', { onClick: increment }, [leaf('+')])
  ])
}))
