packages/compiler/tests/snapshots/codegen__ctx_param_present.snap
---
source: tests/codegen.rs
expression: output.js
---
import { branch, leaf, slot } from '@aihu/arbor'
import type { Signal } from '@aihu/signals'
import { signal } from '@aihu/signals'
import { defineComponent, defineElement } from '@aihu/runtime'

defineElement('x-ctx', defineComponent((_ctx) => {
  const [val, setVal] = signal(0)

  return branch('span', undefined, [leaf([val, setVal] as unknown as Signal<string>)])
}))
