packages/compiler/tests/snapshots/codegen__event_attr_onclick.snap
---
source: tests/codegen.rs
expression: output.js
---
// @aihu:extract read=agents call=anonymous
// @aihu:island static
import { branch, leaf, slot } from '@aihu/arbor'
import { defineComponent, defineElement } from '@aihu/runtime'

defineElement('x-btn', defineComponent((_ctx) => {
  const handler = () => {}

  return branch('button', { onClick: handler }, [leaf('click')])
}))
