packages/compiler/tests/snapshots/codegen__import_type_signal_present.snap
---
source: tests/codegen.rs
expression: output.js
---
// @aihu:extract read=agents call=anonymous
import { branch, leaf, slot } from '@aihu/arbor'
import type { Signal } from '@aihu/signals'
import { signal } from '@aihu/signals'
import { defineComponent, defineElement } from '@aihu/runtime'

defineElement('x-sig', defineComponent((_ctx) => {
  const [val, setVal] = signal(0)

  return branch('span', undefined, [leaf([val, setVal] as unknown as Signal<string>)])
}))
