packages/compiler/tests/snapshots/codegen__leaf_signal_interpolation_cast.snap
---
source: tests/codegen.rs
assertion_line: 430
expression: output.js
---
import { branch, leaf, slot } from '@aihu/arbor'
import type { Signal } from '@aihu/signals'
import { signal } from '@aihu/signals'
import { defineComponent, defineElement } from '@aihu/runtime'

defineElement('x-score', defineComponent((_ctx) => {
  const [score, setScore] = signal(0)

  return branch('span', undefined, [leaf([score, setScore] as unknown as Signal<string>)])
}))
