packages/compiler/tests/snapshots/codegen__no_signals_plain_leaf.snap
---
source: tests/codegen.rs
assertion_line: 55
expression: output.js
---
import { branch, leaf, slot } from '@scribe/arbor'
import { defineComponent, defineElement } from '@scribe/runtime'

defineElement('x-msg', defineComponent((_ctx) => {
  const message = 'hello'

  return branch('p', undefined, [leaf(message)])
}))
