packages/compiler/tests/snapshots/codegen__plain_var_no_cast.snap
---
source: tests/codegen.rs
expression: output
---
import { branch, leaf } from '@scribe/arbor'
import { defineComponent, defineElement } from '@scribe/runtime'

defineElement('x-head', defineComponent((_ctx) => {
  const title = 'hello'

  return branch('h1', undefined, [leaf(title)])
}))
