packages/compiler/tests/snapshots/codegen__slot_default_codegen.snap
---
source: tests/codegen.rs
expression: output.js
---
// @aihu:extract read=agents call=anonymous
import { branch, leaf, slot } from '@aihu/arbor'
import { defineComponent, defineElement } from '@aihu/runtime'

const createSlotBoundary = (o, b) => slot(o?.name ?? undefined);

defineElement('x-slot', defineComponent((_ctx) => {
  return branch('div', undefined, [createSlotBoundary({ expose: [] }, () => { return branch(null, undefined, []) })])
}))
